add validator and post put operation for users
